--- a/app/package.json
+++ b/app/package.json
@@ -21,14 +21,17 @@
     "css-loader": "^0.28.7",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-bundle-tracker": "^0.2.0",
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "move-js": "^0.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "velocity-animate": "^1.5.0",
     "webpack-merge": "^4.1.1"
   }
 }
