--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+certifi==2017.11.5
+chardet==3.0.4
 Django==1.11.5
 django-webpack-loader==0.5.0
 djangorestframework==3.6.4
+idna==2.6
+praw==5.2.0
+prawcore==0.12.0
 psycopg2==2.7.3.2
 pytz==2017.2
+requests==2.18.4
+update-checker==0.16
+urllib3==1.22
